# ecm

./: .gitignore  Cargo.toml  LICENSE  README.md  build_sdk.sh  compile.sh  compile_run.sh  run_build.sh  run_e2e_tests.sh  run_sdk.sh  run_utest.sh
docker/: Dockerfile  sdk_version.sh
e2e_tests/: Varfile.py  ecm.robot
e2e_tests/test_files/: mosquitto.conf
src/: file_writer.rs  main.rs
