[package]
name = "electricity_consumption_monitor"
version = "0.0.1"
edition = "2021"
authors = ["Peter Wagner <peter.josef.wagner@gmail.com>"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
paho-mqtt = "0.12"
futures = "0.3"
async-std = "1.12.0"
env_logger = "0.10.1"
text-colorizer = "1.0.0"
