[package]
name = "electricity_consumption_monitor"
version = "0.1.0"
edition = "2021"
authors = ["Peter Wagner <peter.josef.wagner@gmail.com>"]

[[bin]]
name = "ecm"
path = "src/main.rs"

[dependencies]
paho-mqtt = { version = "0.12", default-features=false, features=["bundled"] }
futures = "0.3"
async-std = "1.12.0"
env_logger = "0.10.1"
text-colorizer = "1.0.0"
